--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -44,16 +44,19 @@ code {
 .itemMenu:hover {
     cursor: pointer;
     transform: scale(1.2);
-    background-color: rgb(165, 164, 164);
+    background-color: rgb(164, 164, 164);
 }
 
-.corpo {
+.home {
     min-height: 400px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 50px;
     margin-top: 10px;
     margin-bottom: 10px;
+    color: #5a5a5a
+    
 }
+
 
 .about {
     font-size: 16px;
@@ -66,4 +69,5 @@ code {
     font-size: 12px;
     text-align: center;
     color: #5a5a5a;
+    margin-top: 50px;
 }
