--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -54,7 +54,15 @@ code {
     margin-top: 10px;
     margin-bottom: 10px;
     color: #5a5a5a
-    
+}
+
+.films {
+    min-height: 400px;
+    border-radius: 10px;
+    padding: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #5a5a5a
 }
 
 
